--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   json_annotation: ^4.9.0
   connectivity_plus: ^5.0.2
   injectable: ^2.5.0
+  google_maps_flutter: ^2.9.0
+  geolocator: ^13.0.1
 
 dev_dependencies:
   flutter_test:
